# gymflow-back-end

./: .env  alembic.ini  pyproject.toml
migration/: env.py
migration/versions/: 05e9978a4a36_update_access_code_length_to_7.py  2b00bc1404da_create_coaches_and_students_tables.py  2d696f003acc_create_coaches_table.py  4024c6ce0593_create_workout_plans_and_workout_.py  476a51095132_create_attendances_table.py  4f8e960b1926_create_payments_table.py  505d7b9b02f3_create_users_table.py  660ee1745c35_add_data_inicio_and_data_fim_to_students.py  7ae6cdaff313_create_payments_table.py  7b3db3404c5a_create_payments_table.py  7db785189ea5_add_experiencias_and_access_code_to_.py  93a60ce842a9_add_access_codes_table_remove_.py  99a9313696cd_create_payments_table.py  c5fa90132914_create_coach_experiencias_table.py  d538be6447f2_add_activation_token_to_students.py  e592b2a54224_create_tables.py  ef1cac266d38_create_attendances_table.py
src/: main.py
src/auth/: admin_route.py  dependencies.py  jwt.py  login_route.py
src/controllers/: access_code_controller.py  attendance_controller.py  coach_controller.py  payment_controller.py  payment_plans_controller.py  student_controller.py  workout_plan_controller.py
src/routes/: access_code_routes.py  attendance_route.py  base_route.py  coach_routes.py  main_routes.py  payment_plans_routes.py  payment_route.py  payment_routes.py  presence_routes.py  student_routes.py  training_routes.py  workout_plan_routes.py
src/schemas/: access_code_schema.py  attendance_schema.py  base_schema.py  coach_schema.py  payment_plans_schema.py  payment_schema.py  student_schema.py  (+2 more)
(+34 files in other folders)
